--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,5 +1,8 @@
 name: pull latest llvm project and create PR if updated
 
+on:
+  workflow_dispatch:
+
 env:
   LLVM_COMMIT: ff4027d152d0d928540dbc19a41840a3a59ff23d
   CMAKE_FLAGS: '-DCMAKE_LINKER=lld -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DMLIR_DIR=$GITHUB_WORKSPACE/llvm-project/prefix/lib/cmake/mlir/ -DLLVM_DIR=$GITHUB_WORKSPACE/llvm-project/prefix/lib/cmake/llvm/ -DLLVM_EXTERNAL_LIT=$GITHUB_WORKSPACE/llvm-project/build/bin/llvm-lit'
