--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -35,8 +35,8 @@ jobs:
           python .github/workflows/replace_commit_hash_in_yml.py ${{ env.LLVM_COMMIT_HASH }}
           git config --local user.email "github-actions@github.com"
           git config --local user.name "github-actions"
-          git checkout -b ${{ env.LLVM_COMMIT_HASH }}
+          git checkout -b "gh_latest_llvm"
           git add .
           git commit -m "Update to LLVM commit ${{ env.LLVM_COMMIT_HASH }}"
-          git push origin ${{ env.LLVM_COMMIT_HASH }}
-          gh pr create --title "Update to LLVM commit ${{ env.LLVM_COMMIT_HASH }}" --body "Update to LLVM commit ${{ env.LLVM_COMMIT_HASH }}" --base main --head ${{ env.LLVM_COMMIT_HASH }}
+          git push origin "gh_latest_llvm"
+          gh pr create --title "Update to LLVM commit ${{ env.LLVM_COMMIT_HASH }}" --body "Update to LLVM commit ${{ env.LLVM_COMMIT_HASH }}" --base main --head "gh_latest_llvm"
