--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: dot env
-        uses: falti/dotenv-action
+        uses: falti/dotenv-action@v1.0.2
       - name: Get LLVM
         uses: actions/checkout@v2
         with:
