--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,8 +7,12 @@ jobs:
     name: Check formatting
     runs-on: ubuntu-latest
     steps:
-      - name: dot env
-        uses: falti/dotenv-action@v1
+      - name: Load .env file
+        uses: xom9ikk/dotenv@v2
+        with:
+          path: .env
+          mode: development
+          load-mode: strict
       - name: Get Template Code
         uses: actions/checkout@v2
       - name: clang-format
@@ -22,8 +26,12 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
     steps:
-      - name: dot env
-        uses: falti/dotenv-action@v1
+      - name: Load .env file
+        uses: xom9ikk/dotenv@v2
+        with:
+          path: .env
+          mode: development
+          load-mode: strict
       - name: Configure Environment
         run: echo "$GITHUB_WORKSPACE/llvm-project/prefix/bin" >> "$GITHUB_PATH"
       - name: Get Template Code
