--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -8,8 +8,12 @@ jobs:
     name: pull latest llvm project and create PR if updated
     runs-on: ubuntu-latest
     steps:
-      - name: dot env
-        uses: falti/dotenv-action@v1
+      - name: Load .env file
+        uses: xom9ikk/dotenv@v2
+        with:
+          path: .env
+          mode: development
+          load-mode: strict
       - name: Get LLVM
         uses: actions/checkout@v2
         with:
