--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -16,7 +16,7 @@ jobs:
         uses: xom9ikk/dotenv@v2
         with:
           load-mode: strict
-          path: 'mlir-standalone-template/.env'
+          path: 'mlir-standalone-template/'
       - name: Get LLVM
         uses: actions/checkout@v2
         with:
