--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -6,7 +6,7 @@ on:
       ref:
         description: 'Branch and Commit hash to pull'
         required: true
-        default: 'e.g. refs/tags/llvm/15.0.7 or main'
+        default: 'e.g. refs/tags/llvmorg-15.0.6 or main'
 
 jobs:
   pull:
